--- a/style.css
+++ b/style.css
@@ -1,1 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap');
 
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
+body{
+    font-family: "Kelly Slab", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: #86D488;
+}
+.start{
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+}
+
+.text{
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 68px;
+    margin-bottom: 80px;
+
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    height: 264px;
+    width: 640px;
+    font-size: 128px;
+    color: #1D531D;
+    border-radius: 40px;
+    margin: 0 auto;
+}
+
+
+
+.btn-1{
+    margin-bottom: 30px;
+    font-size: 128px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 64px;
+    width: 524px;
+    height: 148px;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+
+    
+
+}
+.btn-2{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 64px;
+    width: 524px;
+    height: 148px;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    
+
+}
+.btn-3{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 64px;
+    width: 524px;
+    height: 148px;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    
+
+}
+
+.level{
+    margin-bottom: 50px;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 64px;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
