--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     font-style: normal;
     background-color: #86D488;
 }
+
 .start{
     height: 100vh;
     width: 100vw;
@@ -24,7 +25,6 @@ body{
     align-items: center;
     font-size: 68px;
     margin-bottom: 80px;
-
 }
 
 .button{
@@ -38,9 +38,11 @@ body{
     color: #1D531D;
     border-radius: 40px;
     margin: 0 auto;
+    cursor: pointer;
 }
-
-
+.second{
+    display: none;
+}
 
 .btn-1{
     margin-bottom: 30px;
@@ -50,14 +52,12 @@ body{
     align-items: center;
     font-size: 64px;
     width: 524px;
-    height: 148px;
+    height: 21vh;
     background-color: white;
     color: black;
-    border-radius: 20px;
-
-    
-
+    border-radius: 20px;  
 }
+
 .btn-2{
     margin-bottom: 30px;
     display: flex;
@@ -65,13 +65,12 @@ body{
     align-items: center;
     font-size: 64px;
     width: 524px;
-    height: 148px;
+    height: 21vh;
     background-color: white;
     color: black;
-    border-radius: 20px;
-    
-
+    border-radius: 20px;  
 }
+
 .btn-3{
     margin-bottom: 30px;
     display: flex;
@@ -79,12 +78,10 @@ body{
     align-items: center;
     font-size: 64px;
     width: 524px;
-    height: 148px;
+    height: 21vh;
     background-color: white;
     color: black;
-    border-radius: 20px;
-    
-
+    border-radius: 20px;   
 }
 
 .level{
@@ -94,6 +91,10 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 64px;
+} 
+
+.third{
+    display:none;
 }
 
 .buttons{
@@ -117,8 +118,8 @@ body{
     align-items: center;
     color: #ffffff;
     font-size: 96px;
+    text-align: center;
 }
-
 
 .answer{
     margin-bottom: 30px;
@@ -131,13 +132,26 @@ body{
     background-color: white;
     color: black;
     border-radius: 20px;
+    text-align: center;
 }
+
 .answers{
     display: flex;
     justify-content: space-evenly;
 }
+
 h3{
-    
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 86px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+
+.end{
+    display: none;
 }
 
 
